[package]
name = "spawner"
version = "0.1.0"
authors = ["Pierre Guillaume Herveou <pgherveou@lyft.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"